--- a/DistRevEng/index.html
+++ b/DistRevEng/index.html
@@ -21,6 +21,7 @@
           <div class="col-lg-12">
             <h1 class="mt-5">Reverse Engineering Memoryless Distortion Effects<br>with Differentiable Waveshapers
             <!-- <hr> -->
+            <p></p>
             <p class="lead">
                 <a href="https://www.josephtcolonel.com/">Joseph T Colonel</a>,
                 <a href="https://mcomunita.github.io">Marco Comunità</a>,
@@ -59,27 +60,97 @@
 
         <div class="section">
             <h2 class="">Differentiable Waveshapers Samples</h2>
-            <hr>
-            <p>
-                Lorem ipsum
-            </p>
+            <!-- <hr> -->
+            <p></p>
             <table class="table table-sm text-center" style="vertical-align: middle;">
                 <tr>
-                    <th style="width: 25%">Waveshaper</th>
-                    <th style="width: 25%">Mesa/Boogie<br>Grid Slammer<br>(Emulation)</th>
-                    <th style="width: 25%">Vox<br>Tone Bender<br>(Emulation)</th>
+                    <th style="width: 15%">Waveshaper</th>
+                    <th style="width: 25%">Mesa/Boogie<br>Grid Slammer</th>
+                    <th style="width: 25%">Vox<br>Tone Bender</th>
                     <th style="width: 25%">ProCo<br>Rat</th>
                 </tr>
                 <tr>
                     <td>Dry</td>
                     <td>
-                        <audio controls class="player"><source src="DistRevEng/audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_dry.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_dry.wav" type="audio/mpeg"></audio>
                     </td>
                     <td>
-                        <audio controls class="player"><source src="DistRevEng/audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_dry.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_dry.wav" type="audio/mpeg"></audio>
                     </td>
                     <td>
-                        <audio controls class="player"><source src="DistRevEng/audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_dry.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_dry.wav" type="audio/mpeg"></audio>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Reference</td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_reference.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_target.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_target.wav" type="audio/mpeg"></audio>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Tanh</td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_tanh.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_tanh.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_tanh.wav" type="audio/mpeg"></audio>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Fourier<br>Series</td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_fourier.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_fourier.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_fourier.wav" type="audio/mpeg"></audio>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Legendre<br>Polynomials</td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_legendre.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_legendre.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_legendre.wav" type="audio/mpeg"></audio>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Sumtanh<br>Family</td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_sumtanh.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_sumtanh.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_sumtanh.wav" type="audio/mpeg"></audio>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Powtanh<br>Family</td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_powtanh.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_powtanh.wav" type="audio/mpeg"></audio>
+                    </td>
+                    <td>
+                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_powtanh.wav" type="audio/mpeg"></audio>
                     </td>
                 </tr>
             </table>
@@ -92,17 +163,12 @@
             <div style="background-color: #e9ecef;">
                 <pre>
                 <code>
-    @article{doi:10.1121/10.0005622,
-    author = {Colonel,Joseph T.  and Reiss,Joshua },
-    title = {Reverse engineering of a recording mix with differentiable digital signal processing},
-    journal = {The Journal of the Acoustical Society of America},
-    volume = {150},
-    number = {1},
-    pages = {608-619},
-    year = {2021},
-    doi = {10.1121/10.0005622},
-    URL = {https://doi.org/10.1121/10.0005622},
-    eprint = {https://doi.org/10.1121/10.0005622}
+    @inproceedings{colonel2022reverse,
+    title={Reverse engineering memoryless distortion effects with differentiable waveshaper},
+    author={Colonel, Joseph T. and Comunit\`a, Marco and Reiss, Joshua},
+    booktitle={Audio Engineering Society Convention 153},
+    year={2022},
+    organization={Audio Engineering Society}
     }</code>
                 </pre>
             </div>
