--- a/NonlinRevEng/index.html
+++ b/NonlinRevEng/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Webpage hosting audio examples.">
     <meta name="author" content="Joseph T Colonel">
-    <title>Reverse Engineering Memoryless Distortion Effects with Differentiable Waveshapers</title>
+    <title>Reverse Engineering a Nonlinear Time-Invariant Mix of a Multitrack Recording</title>
     
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -18,12 +18,11 @@
     <div class="jumbotron jumbotron-fluid text-center">
         <div class="row">
           <div class="col-lg-12">
-            <h1 class="mt-5">Reverse Engineering Memoryless Distortion Effects<br>with Differentiable Waveshapers
+            <h1 class="mt-5">Reverse Engineering a Nonlinear Time-Invariant Mix <br>of a Multitrack Recording
             <!-- <hr> -->
             <p></p>
             <p class="lead">
                 <a href="https://www.josephtcolonel.com/">Joseph T Colonel</a>,
-                <a href="https://mcomunita.github.io">Marco Comunità</a>,
                 <a href="http://www.eecs.qmul.ac.uk/~josh/">Joshua Reiss</a> 
             </p>
             <!-- <div class="btn-group" role="group" aria-label="Basic example">
@@ -38,122 +37,166 @@
             <h2>Abstract</h2>
             <hr>
             <p>
-                We present a lightweight method of reverse engineering distortion effects 
-                using Wiener-Hammerstein models implemented in a differentiable framework. 
-                The Wiener-Hammerstein models are formulated using graphic equalizer 
-                pre-emphasis and de-emphasis filters and a parameterized waveshaping 
-                function. Several parameterized waveshaping functions are proposed and 
-                evaluated. The performance of each method is measured both objectively and 
-                subjectively on a dataset of guitar distortion emulation software plugins 
-                and guitar audio samples.  time-invariant effects such as gain, pan, 
-                equalisation, delay, and reverb. Nonlinear effects, such as distortion 
-                and compression, are not considered in this work. The optimization 
-                procedure used is the stochastic gradient descent with the aid of 
-                differentiable digital signal processing modules. This method allows for a 
-                fully interpretable representation of the mixing signal chain by explicitly 
-                modelling the audio effects rather than using differentiable blackbox modules. Two reverb module architectures are proposed, a “stereo reverb” model and an “individual reverb” model, and each is discussed. Objective feature measures are taken of the outputs of the two architectures when tasked with estimating a target mix and compared against a stereo gain mix baseline. A listening study is performed to measure how closely the two architectures can perceptually match a reference mix when compared to a stereo gain mix. Results show that the stereo reverb model performs best on objective measures and there is no statistically significant difference between the participants' perception of the stereo reverb model and reference mixes.
+                A method to retrieve the parameters used to create a multitrack mix using only raw tracks and the stereo mixdown is presented. 
+              This method is able to model nonlinear time-invariant effects such as gain, pan, equalisation, dynamic range compression, distortion, delay, and reverb.
+              The optimization procedure used is the stochastic gradient descent with the aid of differentiable digital signal processing modules. 
+              This method allows for a fully interpretable representation of the mixing signal chain by explicitly modelling the audio effects rather than using differentiable blackbox modules. 
+              The modelling capacity of several different mixing chains are investigated.
+              Objective feature measures are taken of the outputs of the various mixing chains when tasked with estimating a target mix and compared against a stereo gain mix baseline. 
+              A listening study is performed to measure how closely the mixing chains can perceptually match a reference mix when compared to a stereo gain mix. 
+              Results show that the full signal chain performs best on objective measures and there is no statistically significant difference between the participants' perception of the full mixing chain and reference mixes.
             </p>
         </div>
 
         <br>
 
-        <div class="section">
-            <h2 class="">Differentiable Waveshapers Samples</h2>
-            <!-- <hr> -->
-            <p></p>
-            <table class="table table-sm text-center" style="vertical-align: middle;">
+        <table class="table table-sm text-center" style="vertical-align: middle;">
                 <tr>
-                    <th style="width: 15%">Waveshaper</th>
-                    <th style="width: 25%">Mesa/Boogie<br>Grid Slammer</th>
-                    <th style="width: 25%">Vox<br>Tone Bender</th>
-                    <th style="width: 25%">ProCo<br>Rat</th>
+                    <th class="passage">Mixdown</th>
+                    <th>Reference</th>
+                    <th>Full Mixing Chain</th>
+                    <th>DRC - EQ - Reverb</th>
+                    <th>EQ - Reverb (Linear Mix)</th>
+                    <th>Gain Mix</th>
                 </tr>
                 <tr>
-                    <td>Dry</td>
+                    <td class="passage">03_A</td>
                     <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_dry.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player">
+                        <source src="audio/Desert Reference.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
                     </td>
                     <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_dry.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player">
+                        <source src="audio/Desert 2Bus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
                     </td>
                     <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_dry.wav" type="audio/mpeg"></audio>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Reference</td>
-                    <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_reference.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player">
+                        <source src="audio/Desert Gain.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
                     </td>
                     <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_target.wav" type="audio/mpeg"></audio>
-                    </td>
-                    <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_target.wav" type="audio/mpeg"></audio>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Tanh</td>
-                    <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_tanh.wav" type="audio/mpeg"></audio>
-                    </td>
-                    <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_tanh.wav" type="audio/mpeg"></audio>
-                    </td>
-                    <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_tanh.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player">
+                        <source src="audio/Desert IndBus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
                     </td>
                 </tr>
                 <tr>
-                    <td>Fourier<br>Series</td>
+                    <td class="passage">Etc</td>
                     <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_fourier.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player">
+                        <source src="audio/Etc Reference.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
                     </td>
                     <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_fourier.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player">
+                        <source src="audio/Etc 2Bus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
                     </td>
                     <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_fourier.wav" type="audio/mpeg"></audio>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Legendre<br>Polynomials</td>
-                    <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_legendre.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player">
+                        <source src="audio/Etc Gain.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
                     </td>
                     <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_legendre.wav" type="audio/mpeg"></audio>
-                    </td>
-                    <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_legendre.wav" type="audio/mpeg"></audio>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Sumtanh<br>Family</td>
-                    <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_sumtanh.wav" type="audio/mpeg"></audio>
-                    </td>
-                    <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_sumtanh.wav" type="audio/mpeg"></audio>
-                    </td>
-                    <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_sumtanh.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player">
+                        <source src="audio/Etc IndBus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
                     </td>
                 </tr>
                 <tr>
-                    <td>Powtanh<br>Family</td>
+                    <td class="passage">Glad</td>
                     <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/G71-48108-MGS-D10T8-20757/G71-48108-MGS-D10T8-20757_powtanh.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player">
+                        <source src="audio/Blue Reference.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
                     </td>
                     <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P64-55110-VTB-F10-41197/P64-55110-VTB-F10-41197_powtanh.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
                     </td>
                     <td>
-                        <audio controls class="player" style="width: 250px"><source src="audio/P95-45250-RAT-D10F8-41562/P95-45250-RAT-D10F8-41562_powtanh.wav" type="audio/mpeg"></audio>
+                        <audio controls class="player">
+                        <source src="audio/Blue Gain.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Blue IndBus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="passage">Pony</td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Pony Reference.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Pony 2Bus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Pony Gain.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Pony IndBus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="passage">Saga</td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Saga Reference.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Saga 2Bus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Saga Gain.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Saga IndBus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
                     </td>
                 </tr>
             </table>
             <p class="text-center">All listening samples are 44.1kHz wav files.</p>
+
         </div>
 
         <div class="section">
