--- a/NonlinRevEng/index.html
+++ b/NonlinRevEng/index.html
@@ -63,25 +63,31 @@
                     <td class="passage">03_A</td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Desert Reference.wav" type="audio/mpeg">
+                        <source src="audio/animals/03_A_mix_reference.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Desert 2Bus.wav" type="audio/mpeg">
+                        <source src="audio/animals/03_A_mix_full.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Desert Gain.wav" type="audio/mpeg">
+                        <source src="audio/animals/03_A_mix_cer.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Desert IndBus.wav" type="audio/mpeg">
+                        <source src="audio/animals/03_A_mix_linear.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/animals/03_A_mix_gain.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
