--- a/NonlinRevEng/index.html
+++ b/NonlinRevEng/index.html
@@ -93,109 +93,166 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="passage">Etc</td>
+                    <td class="passage">08_A</td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Etc Reference.wav" type="audio/mpeg">
+                        <source src="audio/animals/08_A_mix_reference.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Etc 2Bus.wav" type="audio/mpeg">
+                        <source src="audio/animals/08_A_mix_full.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Etc Gain.wav" type="audio/mpeg">
+                        <source src="audio/animals/08_A_mix_cer.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Etc IndBus.wav" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="passage">Glad</td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/Blue Reference.wav" type="audio/mpeg">
+                        <source src="audio/animals/08_A_mix_linear.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/Blue Gain.wav" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/Blue IndBus.wav" type="audio/mpeg">
+                        <source src="audio/animals/08_A_mix_gain.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                 </tr>
                 <tr>
-                    <td class="passage">Pony</td>
+                    <td class="passage">06_B</td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Pony Reference.wav" type="audio/mpeg">
+                        <source src="audio/haunted_house/06_B_mix_reference.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Pony 2Bus.wav" type="audio/mpeg">
+                        <source src="audio/haunted_house/06_B_mix_full.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Pony Gain.wav" type="audio/mpeg">
+                        <source src="audio/haunted_house/06_B_mix_cer.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Pony IndBus.wav" type="audio/mpeg">
+                        <source src="audio/haunted_house/06_B_mix_linear.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/haunted_house/06_B_mix_gain.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                 </tr>
                 <tr>
-                    <td class="passage">Saga</td>
+                    <td class="passage">14_B</td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Saga Reference.wav" type="audio/mpeg">
+                        <source src="audio/haunted_house/14_B_mix_reference.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Saga 2Bus.wav" type="audio/mpeg">
+                        <source src="audio/haunted_house/14_B_mix_full.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Saga Gain.wav" type="audio/mpeg">
+                        <source src="audio/haunted_house/14_B_mix_cer.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/Saga IndBus.wav" type="audio/mpeg">
+                        <source src="audio/haunted_house/14_B_mix_linear.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/haunted_house/14_B_mix_gain.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="passage">19_C</td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/wealthy_in_time/19_C_mix_reference.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/wealthy_in_time/19_C_mix_full.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/wealthy_in_time/19_C_mix_cer.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/wealthy_in_time/19_C_mix_linear.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/wealthy_in_time/19_C_mix_gain.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="passage">20_C</td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/wealthy_in_time/20_C_mix_reference.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/wealthy_in_time/20_C_mix_full.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/wealthy_in_time/20_C_mix_cer.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/wealthy_in_time/20_C_mix_linear.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/wealthy_in_time/20_C_mix_gain.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
@@ -211,12 +268,12 @@
             <div style="background-color: #e9ecef;">
                 <pre>
                 <code>
-    @inproceedings{colonel2022reverse,
-    title={Reverse engineering memoryless distortion effects with differentiable waveshaper},
-    author={Colonel, Joseph T. and Comunit\`a, Marco and Reiss, Joshua},
-    booktitle={Audio Engineering Society Convention 153},
-    year={2022},
-    organization={Audio Engineering Society}
+    @inproceedings{-,
+    title={-},
+    author={Colonel, Joseph T. and Reiss, Joshua},
+    booktitle={-},
+    year={2023},
+    organization={-}
     }</code>
                 </pre>
             </div>
@@ -224,7 +281,7 @@
     </div>
         <hr>
         <footer>
-            <p>*Submitted to JASA</p>
+            <p>*Submitted to -</p>
             <p>Send feedback and questions to <a href="http://josephtcolonel.com">Joseph T Colonel</a>.</p>
         </footer>
 
